# qPAI_cINN_uncertainty_estimation

./: .gitignore  README.md  pyproject.toml
notebooks/: minimal_example.ipynb  multiple_eval.ipynb  scatchpad.ipynb
notebooks/.ipynb_checkpoints/: scatchpad-checkpoint.ipynb
qPAI_cINN_uncertainty_estimation/: cinn_build.py  config.py  data.py  eval.py  init_log.py  loss_viz.py  minimal_example.py  minimal_example_1.py  model.py  monitoring.py  normalisation.py  train.py  viz.py
scripts/: eval_multiple.py  plot_eval.py  plot_gas_challenge.py  plot_losses_multiple.py  plot_phantoms.py  train_multiple.py
tests/: test_qpai_cinn_uncertainty_estimation.py
