[tool.poetry]
name = "qPAI_cINN_uncertainty_estimation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.3.0"
numpy = "^1.23.0"
freia = {git = "https://github.com/VLL-HD/FrEIA.git"}
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
torchvision = "^0.12.0"
black = "^22.3.0"
jupyter = "^1.0.0"
jupyterhub = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
